Fixed alignment

--- a/cs-97-react/src/components/Listings/ListingForm.css
+++ b/cs-97-react/src/components/Listings/ListingForm.css
@@ -1,5 +1,5 @@
-.listing-form {
-  background-color: var(--main-background-color);
+.listing-page{
+
   display: flex;
   text-align: center;
   justify-content: center;
